# stargate

./: .gitignore  Cargo.toml  config.toml
app-cmd/: Cargo.toml
app-cmd/src/: config.rs  errors.rs  interactors.rs  lib.rs
app-cmd/src/interactors/: relay.rs
app-cmd/src/interactors/relay/: follow_accept.rs
driver/: Cargo.toml
driver/src/: client.rs  config.rs  error.rs  hasher.rs  keyset.rs  lib.rs  middleware.rs  remote.rs
driver/src/client/: cache.rs  http.rs
driver/src/keyset/: signer.rs  verifier.rs
driver/src/middleware/: httpsig.rs
driver/src/remote/: actor.rs  inbox.rs
driver/src/signature/: signer.rs  verifier.rs
kernel/: Cargo.toml
kernel/src/: entities.rs  errors.rs  interface.rs  lib.rs
kernel/src/entities/: activity.rs  actor.rs  json.rs
kernel/src/entities/activity/: activity_id.rs  types.rs
kernel/src/entities/activity/types/: accept.rs  follow.rs
kernel/src/entities/actor/: actor_id.rs  types.rs
kernel/src/entities/links/: types.rs
kernel/src/entities/links/types/: image.rs  key.rs
kernel/src/interface/: error.rs  remotes.rs
kernel/src/interface/remotes/: actor.rs  inbox.rs
server/: Cargo.toml
server/src/: app.rs  error.rs  lib.rs  logging.rs  main.rs  routing.rs
server/src/routing/: relay.rs
server/src/routing/api/: debug.rs
server/src/routing/relay/: actor.rs  middleware.rs  well_known.rs
server/src/routing/relay/actor/: inbox.rs  profile.rs
