[package]
name = "driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
thiserror.workspace = true
error-stack.workspace = true

tracing.workspace = true

serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"
toml = { version = "0.9.5", features = ["serde"] }

# Activity Pub Protocol
reqwest = { version = "^0.12", features = ["json", "multipart"] }
http = "^1.3"
http-body = "^1.0"
http-body-util = "^0.1"
httpdate = "^1"
http-msgsign-draft.workspace = true

futures-util = "^0.3"

rsa = { version = "0.9.8", features = ["getrandom", "sha2"] }
sha2 = "0.10.9"

tempfile = "^3"
redb = { version = "^3.0", features = ["logging"] }

kernel.workspace = true

[dev-dependencies]
tokio = { version = "^1", default-features = false, features = ["rt-multi-thread", "test-util", "macros"] }