[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
destructure = "0.7.0"

url = { version = "^2", features = ["serde"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

thiserror.workspace = true
error-stack.workspace = true