[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["signal"] }

thiserror.workspace = true
error-stack.workspace = true

# logging
tracing.workspace = true
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"

# Framework
axum = "^0.8"
tower-layer = "0.3.3"
tower-service = "0.3.3"

# For Middleware Util
futures-util = "^0.3"

# For handling JSON values
serde_json = "^1"

driver.workspace = true